# rstream

./: Cargo.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: albums.html  app.html  app.js  artists.html  browser.js  index.html  navbar.js  observable.umd.js  observable.umd.js.map  player.js  songs.html  songs.js
field_list/: Cargo.toml
field_list/src/: lib.rs
install/: install.sh  rstream-caddy.service.in  rstream-oauth2-proxy.service.in  rstream-server.service.in  rstream.target.in  uninstall.sh
src/: main.rs
